--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "@ckeditor/ckeditor5-angular": "^1.2.3",
     "@ckeditor/ckeditor5-build-classic": "^20.0.0",
     "@ckeditor/ckeditor5-editor-inline": "^20.0.0",
+    "@kolkov/angular-editor": "^1.1.3",
     "angular2-hotkeys": "^2.2.0",
     "animate.css": "^4.1.0",
     "bootstrap": "^4.4.1",
     "ng-animate": "^0.3.4",
+    "ng-zorro-antd": "9.3.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
