--- a/package.json
+++ b/package.json
@@ -23,13 +23,18 @@
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
     "@ckeditor/ckeditor5-angular": "^1.2.3",
+    "@ckeditor/ckeditor5-basic-styles": "^22.0.0",
     "@ckeditor/ckeditor5-build-classic": "^20.0.0",
     "@ckeditor/ckeditor5-editor-inline": "^20.0.0",
+    "@ckeditor/ckeditor5-ui": "^22.0.0",
     "@kolkov/angular-editor": "^1.1.3",
     "angular2-hotkeys": "^2.2.0",
     "animate.css": "^4.1.0",
+    "audit": "0.0.6",
     "bootstrap": "^4.4.1",
+    "fix": "0.0.6",
     "ng-animate": "^0.3.4",
+    "npm": "^6.14.8",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
