--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "animate.css": "^4.1.0",
     "audit": "0.0.6",
     "bootstrap": "^4.4.1",
+    "ckeditor4": "^4.15.0",
+    "ckeditor4-angular": "^1.3.0",
     "fix": "0.0.6",
     "ng-animate": "^0.3.4",
     "npm": "^6.14.8",
