--- a/package.json
+++ b/package.json
@@ -27,6 +27,11 @@
     "@ckeditor/ckeditor5-build-classic": "^20.0.0",
     "@ckeditor/ckeditor5-editor-inline": "^20.0.0",
     "@ckeditor/ckeditor5-ui": "^22.0.0",
+    "@fortawesome/angular-fontawesome": "^0.6.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-brands-svg-icons": "^5.13.0",
+    "@fortawesome/free-regular-svg-icons": "^5.13.0",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@kolkov/angular-editor": "^1.1.3",
     "angular2-hotkeys": "^2.2.0",
     "animate.css": "^4.1.1",
