--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ckeditor/ckeditor5-ui": "^22.0.0",
     "@kolkov/angular-editor": "^1.1.3",
     "angular2-hotkeys": "^2.2.0",
+    "angularx-qrcode": "^2.3.5",
     "animate.css": "^4.1.1",
     "audit": "0.0.6",
     "bootstrap": "^4.4.1",
