--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ngx-device-detector": "^1.4.6",
     "npm": "^6.14.8",
     "rxjs": "~6.5.4",
+    "speak-tts": "^2.0.8",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
