--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "ng-animate": "^0.3.4",
     "ngx-device-detector": "^1.4.6",
     "npm": "^6.14.8",
-    "rxjs": "~6.5.4",
+    "rxjs": "^6.5.5",
     "speak-tts": "^2.0.8",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
