--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ckeditor4": "^4.15.0",
     "ckeditor4-angular": "^1.3.0",
     "fix": "0.0.6",
+    "hammerjs": "^2.0.8",
     "ng-animate": "^0.3.4",
     "ngx-device-detector": "^1.4.6",
     "npm": "^6.14.8",
