--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "hammerjs": "^2.0.8",
     "moment": "^2.29.1",
     "ng-animate": "^0.3.4",
+    "ng2-dragula": "^2.1.1",
     "ngx-device-detector": "^1.4.6",
     "npm": "^6.14.8",
     "rxjs": "^6.5.5",
