--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ckeditor/ckeditor5-ui": "^22.0.0",
     "@juggle/resize-observer": "^3.3.1",
     "@kolkov/angular-editor": "^1.1.3",
+    "@types/echarts": "^4.9.7",
     "angular2-datetimepicker": "^1.1.1",
     "angular2-hotkeys": "^2.2.0",
     "angularx-qrcode": "^2.3.5",
