--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@juggle/resize-observer": "^3.3.1",
     "@kolkov/angular-editor": "^1.1.3",
     "@types/echarts": "^4.9.7",
+    "@types/hammerjs": "^2.0.39",
     "angular2-datetimepicker": "^1.1.1",
     "angular2-hotkeys": "^2.2.0",
     "angularx-qrcode": "^2.3.5",
