--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~9.1.0",
     "@angular/compiler": "~9.1.0",
     "@angular/core": "~9.1.0",
+    "@angular/fire": "^6.1.5",
     "@angular/flex-layout": "^9.0.0-beta.29",
     "@angular/forms": "~9.1.0",
     "@angular/material": "^9.2.0",
@@ -41,6 +42,7 @@
     "bootstrap": "^4.4.1",
     "ckeditor4": "^4.15.0",
     "ckeditor4-angular": "^1.3.0",
+    "firebase": "^8.9.0",
     "fix": "0.0.6",
     "hammerjs": "^2.0.8",
     "moment": "^2.29.1",
