--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "ngx-device-detector": "^1.4.6",
     "ngx-kjua": "^1.12.3",
     "npm": "^6.14.8",
+    "qr-code-styling": "^1.6.0-rc.1",
     "rxjs": "^6.5.5",
     "speak-tts": "^2.0.8",
     "tslib": "^1.10.0",
