--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,15 @@
 {
   "projects": {
-    "default": "iperson"
+    "default": "iperson",
+    "elite": "mrvrman"
+  },
+  "targets": {
+    "mrvrman": {
+      "hosting": {
+        "nw-vote": [
+          "mrvrman"
+        ]
+      }
+    }
   }
 }
