deploying new updated version

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,6 @@
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
     "strictInjectionParameters": true,
-    "enableIvy": false
+    "enableIvy": true
   }
 }
