--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "@ckeditor/ckeditor5-build-classic": "^20.0.0",
     "@ckeditor/ckeditor5-editor-inline": "^20.0.0",
     "@ckeditor/ckeditor5-ui": "^22.0.0",
+    "@fortawesome/angular-fontawesome": "^0.6.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@juggle/resize-observer": "^3.3.1",
     "@kolkov/angular-editor": "^1.1.3",
     "@swimlane/ngx-charts": "^18.0.1",
