report generator has no filter set up yet

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "workbench.preferredDarkColorTheme": "Default Light+",
-    "workbench.colorTheme": "Winter is Coming (Dark Blue - No Italics)"
+    "workbench.colorTheme": "Abyss"
 }
