--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "e2e": "ng e2e"
   },
   "private": true,
+  "browser": {
+    "fs": false,
+    "os": false,
+    "path": false
+  },
   "dependencies": {
     "@angular/animations": "~9.1.0",
     "@angular/cdk": "^9.2.2",
