--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "ckeditor4": "^4.15.0",
     "ckeditor4-angular": "^1.3.0",
     "docx": "^7.3.0",
+    "dom-autoscroller": "^2.3.4",
+    "dragula": "^3.7.3",
     "echarts": "^5.1.1",
     "file-saver": "^2.0.5",
     "fix": "0.0.6",
