--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@juggle/resize-observer": "^3.3.1",
     "@kolkov/angular-editor": "^1.1.3",
     "@swimlane/ngx-charts": "^18.0.1",
+    "@teamhive/lottie-player": "^1.0.0",
     "@types/echarts": "^4.9.7",
     "@types/hammerjs": "^2.0.39",
     "angular2-datetimepicker": "^1.1.1",
