--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "workbench.preferredDarkColorTheme": "Default Light+",
-    "workbench.colorTheme": "Visual Studio Dark"
+    "workbench.colorTheme": "Visual Studio Dark",
+    "typescript.tsdk": "node_modules\\typescript\\lib"
 }
