--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,15 +11,15 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "allowJs": true,
-    "target": "es2020",
+    "target": "ES2022",
     "lib": [
       "es2018",
       "dom"
     ],
+    "useDefineForClassFields": false
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
-    "strictInjectionParameters": true,
-    "enableIvy": true
+    "strictInjectionParameters": true
   }
 }
