--- a/package.json
+++ b/package.json
@@ -24,26 +24,26 @@
     "@angular/flex-layout": "^9.0.0-beta.29",
     "@angular/forms": "^17.3.0",
     "@angular/localize": "^17.3.0",
-    "@angular/material": "^16.2.0",
+    "@angular/material": "^17.3.0",
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@azure/msal-angular": "^2.5.9",
     "@azure/msal-browser": "^2.38.0",
-    "@capacitor/cli": "^3.0.1",
+    "@capacitor/cli": "^5.7.3",
     "@capacitor/core": "^3.0.1",
     "@capacitor/haptics": "^1.0.1",
     "@ckeditor/ckeditor5-angular": "^1.2.3",
-    "@ckeditor/ckeditor5-basic-styles": "^22.0.0",
+    "@ckeditor/ckeditor5-basic-styles": "^41.2.1",
     "@ckeditor/ckeditor5-build-classic": "^20.0.0",
-    "@ckeditor/ckeditor5-editor-inline": "^20.0.0",
-    "@ckeditor/ckeditor5-ui": "^22.0.0",
+    "@ckeditor/ckeditor5-editor-inline": "^41.2.1",
+    "@ckeditor/ckeditor5-ui": "^41.2.1",
     "@fortawesome/angular-fontawesome": "^0.6.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@juggle/resize-observer": "^3.3.1",
     "@kolkov/angular-editor": "^1.1.3",
-    "@swimlane/ngx-charts": "^18.0.1",
+    "@swimlane/ngx-charts": "^20.5.0",
     "@teamhive/lottie-player": "^1.0.0",
     "@types/echarts": "^4.9.7",
     "@types/hammerjs": "^2.0.39",
@@ -61,20 +61,20 @@
     "dragula": "^3.7.3",
     "echarts": "^5.1.1",
     "file-saver": "^2.0.5",
-    "fix": "0.0.6",
+    "fix": "^0.0.3",
     "moment": "^2.29.4",
     "ng-animate": "^0.3.4",
     "ng2-dragula": "^2.1.1",
     "ngx-device-detector": "^1.4.6",
     "ngx-echarts": "^7.0.1",
-    "npm": "^6.14.8",
+    "npm": "^10.5.0",
     "qr-code-styling": "^1.6.0-rc.1",
     "rxjs": "^6.5.5",
     "speak-tts": "^2.0.8",
     "zone.js": "~0.14.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.3.0",
+    "@angular-devkit/build-angular": "^0.1002.1",
     "@angular/cli": "^17.3.0",
     "@angular/compiler-cli": "^17.3.0",
     "@angular/language-service": "^17.3.0",
@@ -89,7 +89,7 @@
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~3.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
-    "protractor": "~7.0.0",
+    "protractor": "^3.3.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~5.4.2"
