--- a/angular.json
+++ b/angular.json
@@ -27,12 +27,12 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/animate.css/animate.css",
+          
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/assets/fonts/hackers.scss",
-              "src/styles.scss",
-              "./node_modules/dragula/dist/dragula.css"
+         
+              "src/styles.scss"
+             
             ],
             "scripts": [],
             "vendorChunk": true,
