--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@angular/common": "^17.3.0",
     "@angular/compiler": "^17.3.0",
     "@angular/core": "^17.3.0",
-    "@angular/flex-layout": "^9.0.0-beta.29",
     "@angular/forms": "^17.3.0",
     "@angular/localize": "^17.3.0",
     "@angular/material": "^17.3.0",
@@ -47,6 +46,7 @@
     "@teamhive/lottie-player": "^1.0.0",
     "@types/echarts": "^4.9.7",
     "@types/hammerjs": "^2.0.39",
+    "@types/raphael": "^2.3.2",
     "angular2-datetimepicker": "^1.1.1",
     "angularx-qrcode": "^2.3.5",
     "animate.css": "^4.1.1",
@@ -57,7 +57,6 @@
     "ckeditor4-angular": "^1.3.0",
     "docx": "^7.3.0",
     "dom-autoscroller": "^2.3.4",
-    
     "echarts": "^5.1.1",
     "file-saver": "^2.0.5",
     "fix": "^0.0.3",
@@ -69,10 +68,9 @@
     "qr-code-styling": "^1.6.0-rc.1",
     "rxjs": "^6.5.5",
     "speak-tts": "^2.0.8",
-    "zone.js": "~0.14.4",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "@types/raphael": "^2.3.2"
+    "zone.js": "~0.14.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.3.0",
