--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@juggle/resize-observer": "^3.3.1",
-    "@kolkov/angular-editor": "^1.1.3",
+    "@kolkov/angular-editor": "^1.2.0",
     "@swimlane/ngx-charts": "^20.5.0",
     "@teamhive/lottie-player": "^1.0.0",
     "@types/echarts": "^4.9.7",
@@ -57,11 +57,13 @@
     "ckeditor4-angular": "^1.3.0",
     "docx": "^7.3.0",
     "dom-autoscroller": "^2.3.4",
+    "dragula": "^3.7.3",
     "echarts": "^5.1.1",
     "file-saver": "^2.0.5",
     "fix": "^0.0.3",
     "moment": "^2.29.4",
     "ng-animate": "^0.3.4",
+    "ng2-dragula": "^5.1.0",
     "ngx-device-detector": "^1.4.6",
     "ngx-echarts": "^7.0.1",
     "npm": "^10.5.0",
