--- a/package.json
+++ b/package.json
@@ -16,24 +16,30 @@
     "path": false
   },
   "dependencies": {
-    "@angular/animations": "^16.2.0",
-    "@angular/cdk": "^16.2.0",
-    "@angular/common": "^16.2.0",
-    "@angular/compiler": "^16.2.0",
-    "@angular/core": "^16.2.0",
-    "@angular/forms": "^16.2.0",
-    "@angular/localize": "^16.2.0",
-    "@angular/material": "^16.2.14",
-    "@angular/platform-browser": "^16.2.0",
-    "@angular/platform-browser-dynamic": "^16.2.0",
-    "@angular/router": "^16.2.0",
+    "@angular/animations": "^17.3.0",
+    "@angular/cdk": "^17.3.0",
+    "@angular/common": "^17.3.0",
+    "@angular/compiler": "^17.3.0",
+    "@angular/core": "^17.3.0",
+    "@angular/forms": "^17.3.0",
+    "@angular/localize": "^17.3.0",
+    "@angular/material": "^17.3.0",
+    "@angular/platform-browser": "^17.3.0",
+    "@angular/platform-browser-dynamic": "^17.3.0",
+    "@angular/router": "^17.3.0",
+    "@ngrx/effects": "^17.1.1",
+    "@ngrx/signals": "^17.1.1",
+    "@ngrx/store": "^17.1.1",
     "@azure/msal-angular": "^2.5.9",
     "@azure/msal-browser": "^2.38.0",
     "@capacitor/cli": "^5.7.3",
     "@capacitor/core": "^3.0.1",
     "@capacitor/haptics": "^1.0.1",
     "@ckeditor/ckeditor5-angular": "^7.0.1",
+    "@ckeditor/ckeditor5-basic-styles": "^41.2.1",
     "@ckeditor/ckeditor5-build-classic": "^41.3.1",
+    "@ckeditor/ckeditor5-editor-inline": "^41.2.1",
+    "@ckeditor/ckeditor5-ui": "^41.2.1",
     "@fortawesome/angular-fontawesome": "^0.6.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
@@ -54,7 +60,6 @@
     "ckeditor4-angular": "^1.3.0",
     "docx": "^7.3.0",
     "dom-autoscroller": "^2.3.4",
-    "dragula": "^3.7.3",
     "echarts": "^5.1.1",
     "file-saver": "^2.0.5",
     "fix": "^0.0.3",
@@ -72,11 +77,11 @@
     "zone.js": "~0.14.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.14",
-    "@angular-devkit/core": "^16.2.0",
-    "@angular/cli": "^16.2.0",
-    "@angular/compiler-cli": "^16.2.0",
-    "@angular/language-service": "^16.2.0",
+    "@angular-devkit/build-angular": "^17.3.0",
+    "@angular-devkit/core": "^17.3.0",
+    "@angular/cli": "^17.3.0",
+    "@angular/compiler-cli": "^17.3.0",
+    "@angular/language-service": "^17.3.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
@@ -91,6 +96,6 @@
     "protractor": "^7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.9.3"
+    "typescript": "~5.4.2"
   }
 }
