--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "workbench.preferredDarkColorTheme": "Default Light+",
-    "workbench.colorTheme": "Visual Studio Dark"
+    "workbench.colorTheme": "Monokai"
 }
