Adde new editor

--- a/package.json
+++ b/package.json
@@ -67,9 +67,11 @@
     "ng2-dragula": "^5.1.0",
     "ngx-device-detector": "^1.4.6",
     "ngx-echarts": "^7.0.1",
+    "ngx-quill": "^26.0.4",
+    "ngx-tinymce": "^18.0.0",
     "npm": "^10.5.0",
     "qr-code-styling": "^1.6.0-rc.1",
-    "rxjs": "^6.5.5",
+    "rxjs": "^7.8.1",
     "speak-tts": "^2.0.8",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
