--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "ckeditor4-angular": "^1.3.0",
     "docx": "^7.3.0",
     "dom-autoscroller": "^2.3.4",
+    "ngx-quill": "^26.0.4",
     "echarts": "^5.1.1",
     "file-saver": "^2.0.5",
     "fix": "^0.0.3",
@@ -70,7 +71,7 @@
     "ngx-echarts": "^7.0.1",
     "npm": "^10.5.0",
     "qr-code-styling": "^1.6.0-rc.1",
-    "rxjs": "^6.5.5",
+    "rxjs": "^7.8.1",
     "speak-tts": "^2.0.8",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
