--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
-    "@azure/msal-angular": "^2.5.9",
-    "@azure/msal-browser": "^2.38.0",
+    "@azure/msal-angular": "2.5.9",
+    "@azure/msal-browser": "2.38.0",
     "@capacitor/cli": "^5.7.3",
     "@capacitor/core": "^3.0.1",
     "@capacitor/haptics": "^1.0.1",
