--- a/package.json
+++ b/package.json
@@ -27,17 +27,14 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
-    "@ngrx/effects": "^17.1.1",
-    "@ngrx/signals": "^17.1.1",
-    "@ngrx/store": "^17.1.1",
-    "@azure/msal-angular": "^2.5.9",
-    "@azure/msal-browser": "^2.38.0",
+    "@azure/msal-angular": "^3.0.23",
+    "@azure/msal-browser": "^3.20.0",
     "@capacitor/cli": "^5.7.3",
     "@capacitor/core": "^3.0.1",
     "@capacitor/haptics": "^1.0.1",
     "@ckeditor/ckeditor5-angular": "^7.0.1",
     "@ckeditor/ckeditor5-basic-styles": "^41.2.1",
-    "@ckeditor/ckeditor5-build-classic": "^41.3.1",
+    "@ckeditor/ckeditor5-build-classic": "^41.4.2",
     "@ckeditor/ckeditor5-editor-inline": "^41.2.1",
     "@ckeditor/ckeditor5-ui": "^41.2.1",
     "@fortawesome/angular-fontawesome": "^0.6.1",
@@ -45,6 +42,9 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@juggle/resize-observer": "^3.3.1",
     "@kolkov/angular-editor": "^1.2.0",
+    "@ngrx/effects": "^17.1.1",
+    "@ngrx/signals": "^17.1.1",
+    "@ngrx/store": "^17.1.1",
     "@swimlane/ngx-charts": "^20.5.0",
     "@teamhive/lottie-player": "^1.0.0",
     "@types/echarts": "^4.9.7",
@@ -56,7 +56,6 @@
     "audit": "0.0.6",
     "bootstrap": "^4.4.1",
     "buffer": "^4.9.2",
-    "ckeditor4": "^4.15.0",
     "ckeditor4-angular": "^1.3.0",
     "docx": "^7.3.0",
     "dom-autoscroller": "^2.3.4",
@@ -68,9 +67,11 @@
     "ng2-dragula": "^5.1.0",
     "ngx-device-detector": "^1.4.6",
     "ngx-echarts": "^7.0.1",
+    "ngx-quill": "^26.0.4",
+    "ngx-tinymce": "^18.0.0",
     "npm": "^10.5.0",
     "qr-code-styling": "^1.6.0-rc.1",
-    "rxjs": "^6.5.5",
+    "rxjs": "^7.8.1",
     "speak-tts": "^2.0.8",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
